--- a/yoga.html
+++ b/yoga.html
@@ -30,6 +30,9 @@
             text-align: center;
             padding: 20px;
         }
+        footer p {
+            padding: 0px 8% 24px 8%;
+        }
     </style>
 </head>
 <body>
@@ -62,6 +65,7 @@
     </section>
 
     <footer>
+        <p>&copy;Anderson Vieira</p>
         <h3>Entre em Contato</h3>
         <p>Para agendar aulas experimentais, entre em contato conosco pelo telefone: 123-456-7890 ou pelo e-mail: info@serenityflowyoga.com</p>
     </footer>
